# DamoDCF

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ValuationNotes/: 00_Title.md  01_Introduction.md  02_IntrinsicValuation.md  04_CostofCapital.md  06_Growth.md
_unittest/: general_test.py
_unittest/assets/: amzn.toml  wbd1.toml  wbd2.toml  wbd3.toml
damo_dcf/: assumptions.py  dcf_calculator.py  failure_calculator.py  option_calculator.py  plotting.py
valuation_notes/: 03_CostOfEquity.md  05_CashFlows.md  07_TerminalValue.md  README.txt  header.tex
