[tool.poetry]
name = "DamoDCF"
version = "0.1.0"
description = "A DCF package inspired by Aswath Damodaran lectures."
authors = ["Lorenzo Vecchietti <lorenzo.vecchietti.1997@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
toml = "^0.10.2"
yfinance = "^0.2.40"
pydantic = "^2.7.2"
scipy = "^1.13.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
pytest = "^8.2.2"
black = "^20.8b1"
flakehell = "^0.9.0"
isort = "^5.8.0"

[tool.flakehell]
# https://flakehell.readthedocs.io/
# https://black.readthedocs.io/en/stable/compatible_configs.html?highlight=flake8#flake8
max-line-length = 88
extend-ignore = "E203, W503"
# https://github.com/flakehell/flakehell/issues/10#issuecomment-822720074
extended_default_ignore = []  # add this

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"
