[tool.poetry]
name = "DamoDCF"
version = "0.1.0"
description = "A DCF package inspired by Aswath Damodaran lectures."
authors = ["Lorenzo Vecchietti <lorenzo.vecchietti.1997@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
toml = "^0.10.2"
yfinance = {extras = ["optional"], version = "^0.2.40"}
pydantic = "^2.7.2"
scipy = "^1.13.1"

[tool.poetry.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"

